<resources>
    <string name="app_name">BilleteraVirtualKRoom</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="the_best_way_to_tran_string">El lugar mas seguro para tu dinero</string>
    <string name="alkewallet_string">AlkeWallet</string>
    <string name="create_new_account_string">Crear cuenta nueva</string>
    <string name="create_account_string">Crear cuenta</string>
    <string name="already_have_account_string">Ya tiene cuenta?</string>
    <string name="name_string">Nombre</string>
    <string name="signup_and_start_tra_string">Registrarse y empezar a transferir</string>
    <string name="login_and_start_tran_string">Logea y empieza a tranferir!</string>
    <string name="enter_your_name_string">Ingresar nombre</string>
    <string name="lastname_string">Apellido</string>
    <string name="enter_your_lastname_string">Ingresar apellido</string>
    <string name="email_string">Email</string>
    <string name="enter_your_email_string">Ingresar tu email</string>
    <string name="password_string">Contraseña</string>
    <string name="enter_your_password_string">Ingresar tu contraseña</string>
    <string name="re_enter_your_password_string">Reingresar contraseña</string>
    <string name="forget_password_string">Olvidaste tu contraseña?</string>
    <string name="login_string">Login</string>

    <string name="hello">Hola %1$s !</string>
    <string name="balance">$%1$s</string>
    <string name="total_balance_number_string">$124.57</string>
    <string name="total_balance_string">Balance Total</string>
    <string name="send_money_string">Enviar Dinero</string>
    <string name="request_money_string">Ingresar Dinero</string>
    <string name="last_transactions_string">Ultimas transacciones</string>
    <string name="there_s_no_transacti_string">No hay transacciones registradas!</string>
    <string name="profile_picture">profile_picture</string>
    <string name="my_profile_string">Mi perfil</string>
    <string name="dashboard_string">Inicio</string>

    <string name="payment_amount_in_string">Cantidad a ingresar</string>
    <string name="payment_amount_out_string">Cantidad a transferir</string>
    <string name="payment_note_string">Notas de transferncia</string>
    <string name="add_payment_note_string">Agregar notas de transferencia(opcional)</string>
    <string name="request_payment_string">Ingresar Dinero</string>

    <string name="my_info_string">Mi Informacion</string>
    <string name="my_cards_string">Mis tarjetas</string>
    <string name="settings_string">Opciones</string>
    <string name="help_center_string">Centro de ayuda</string>
    <string name="pencil">pencil</string>

    <string name="imagen">Imagen</string>
    <!--    <string name="description">TextView</string>-->
    <string name="txduration">TextView</string>

    <string name="name">Nombre</string>
    <string name="date">Fecha</string>
    <string name="rating">Rating</string>
    <!--<string name="date">Date</string>-->
    <string name="txname">TextView</string>
    <string name="txlocate">TextView</string>
    <string name="buy_tickets">Comprar Entradas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="valor">valor</string>
    <string name="valor_mas">+$ %1$s</string>
    <string name="valor_menos">-$ %1$s</string>
    <string name="hola">Hola</string>

</resources>