<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Const"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/rectangle_ek12"
            android:layout_width="match_parent"
            android:layout_height="262dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/soft_blue" />

        <ImageView
            android:id="@+id/path_ek7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/rectangle_ek12"
            android:layout_marginStart="0dp"
            android:src="@drawable/path_ek7"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="28.6dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/jua"
            android:text="@string/hola"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="190dp"
            android:fontFamily="@font/jua"
            android:text="@string/total_balance_number_string"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/total_balance"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="152dp"
            android:fontFamily="@font/jua"
            android:text="@string/total_balance_string"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/user"
            tools:ignore="ImageContrastCheck" />
<!--        android:src="@drawable/profile_picture"-->

        <ImageView
            android:layout_width="24dp"
            android:layout_height="26dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="204dp"
            android:scaleType="centerInside"
            android:src="@drawable/drawable_image_3"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/dashboard"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="53dp"
            android:fontFamily="@font/jua"
            android:text="@string/dashboard_string"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <Button
            android:id="@+id/btnSendMoney"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bright_green"
            android:drawableLeft="@drawable/path_ek6"
            android:fontFamily="@font/jua"
            android:paddingRight="1dp"
            android:text="@string/send_money_string"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:iconPadding="1dp"
            tools:ignore="RtlHardcoded,RtlSymmetry,TouchTargetSizeCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnRequestMoney"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/soft_blue"
            android:drawableLeft="@drawable/path_ek5"
            android:fontFamily="@font/jua"
            android:paddingRight="1dp"
            android:text="@string/request_money_string"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:iconPadding="1dp"
            tools:ignore="RtlHardcoded,RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/last_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/jua"
        android:text="@string/last_transactions_string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="399dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>